# onssa-rag-chatbot

./: .env.example  .gitignore  PROJECT_PLAN.md  README.md  app.py  eval.py  ingest.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: eval_questions.yaml  pages.yaml
docs/: architecture.md  indexed_pages.md  sample_questions.md  security.md
scripts/: check_setup.py
src/onssa_rag/: __init__.py  chunking.py  cleaning.py  config.py  conversations.py  embeddings.py  llm.py  rag.py  retriever.py  safety.py  scraping.py  vectorstore.py  voice.py
tests/: test_chunking.py  test_cleaning.py  test_conversations.py  test_retriever.py  test_safety.py  test_scraping.py  test_smoke.py  test_vectorstore.py  test_voice.py
