[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "onssa-rag"
version = "0.1.0"
description = "Customer-assistance RAG chatbot for the ONSSA website (Streamlit + Ollama + FAISS)"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
